--- a/web/pdf_viewer.css
+++ b/web/pdf_viewer.css
@@ -28,8 +28,8 @@
   overflow: visible;
   border: 9px solid transparent;
   background-clip: content-box;
-  border-image: url(images/shadow.png) 9 9 repeat;
-  background-color: rgba(255, 255, 255, 1);
+  border-image: url(../images/shadow.png) 9 9 repeat;
+  background-color: white;
 }
 
 .pdfViewer.removePageBorders .page {
@@ -102,7 +102,7 @@
   top: 0;
   right: 0;
   bottom: 0;
-  background: url('images/loading-icon.gif') center no-repeat;
+  background: url('../images/loading-icon.gif') center no-repeat;
 }
 
 .pdfPresentationMode .pdfViewer {
